[package]
name = "bswitcher"
version = "0.1.0"
authors = ["Daniel Sockwell <daniel@codesections.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
run_script = "0.3.2"
clap = { git = "https://github.com/clap-rs/clap" }
serde_json = "1.0.44"
itertools = "0.8.2"
strfmt = "0.1.6"
strum_macros = "0.16.0"
